# shadow-chat

./: Makefile  README.md  pyproject.toml
devops/: Dockerfile  docker-compose.yaml
src/: .env-example
src/app/: config.py  main.py
src/app/api/: schema.py
src/app/api/healthcheck/: endpoints.py  schema.py
src/app/api/v0/: router.py  schema.py
src/app/api/v0/users/: endpoints.py  schema.py  service.py
src/database/: alembic.ini  config.py  core.py
src/database/migrations/: env.py
src/database/migrations/versions/: 789a136cea84_initial_commit.py  a7017495af4f_initial_commit.py
src/database/models/: __init__.py  attachments.py  chat_members.py  chats.py  friendships.py  message_read_receipts.py  messages.py  notifications.py  profiles.py  reports.py  user_blocks.py  user_sessions.py  user_settings.py  users.py
src/database/repositories/: __init__.py  users.py
src/utils/: settings.py
