[project]
name = "shadow-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "jonnyboooy",email = "arsen.water@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.2,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "fastapi (>=0.128.1,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "orjson (>=3.11.7,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
